icon amount fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   class="fa-solid fa-cart-shopping fa-xl"
                   aria-label="Shopping cart icon"
                 ></i>
-                <span>0</span>
+                <span class="cart-amount"></span>
               </div>
             </a>
           </li>
