--- a/checkout.html
+++ b/checkout.html
@@ -24,6 +24,7 @@
   <body>
     <main class="checkout-main">
       <div class="checkout-container">
+        <h1>Checkout</h1>
         <div id="checkout"></div>
       </div>
     </main>
