Added nav bar to pages and changed icon css

--- a/checkout.html
+++ b/checkout.html
@@ -22,6 +22,32 @@
     <title>RAINYDAYS | Checkout</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a class="active" href="index.html" title="Go to home page">Home</a>
+          </li>
+          <li>
+            <a href="about.html" title="Go to about page">About</a>
+          </li>
+          <li>
+            <a href="contact.html" title="Go to contact page">Contact</a>
+          </li>
+          <li>
+            <a href="checkout.html" title="Go to checkout page">
+              <div class="cart-icon">
+                <i
+                  class="fa-solid fa-cart-shopping fa-xl"
+                  aria-label="Shopping cart icon"
+                ></i>
+                <span class="cart-amount"></span>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main class="checkout-main">
       <div class="checkout-container">
         <h1>Checkout</h1>
