--- a/product.html
+++ b/product.html
@@ -19,7 +19,32 @@
     <title>RAINYDAYS | Product details</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a class="active" href="index.html" title="Go to home page">Home</a>
+          </li>
+          <li>
+            <a href="about.html" title="Go to about page">About</a>
+          </li>
+          <li>
+            <a href="contact.html" title="Go to contact page">Contact</a>
+          </li>
+          <li>
+            <a href="checkout.html" title="Go to checkout page">
+              <div class="cart-icon">
+                <i
+                  class="fa-solid fa-cart-shopping fa-xl"
+                  aria-label="Shopping cart icon"
+                ></i>
+                <span class="cart-amount"></span>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <main class="product-main">
       <div class="product-container">
