--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
           src="./images/RainyDays_Logo2-white.png"
           alt="Rainydays logo"
         />
+        <p class="site-name">RAINYDAYS</p>
       </div>
+      <input type="checkbox" id="hamburger-menu" />
+      <label for="hamburger-menu" class="menu-icon">
+        <i class="fas fa-bars" aria-label="Icon"></i>
+      </label>
       <nav>
         <ul>
           <li>
@@ -45,7 +50,7 @@
             <a href="checkout.html" title="Go to checkout page">
               <div class="cart-icon">
                 <i
-                  class="fa-solid fa-cart-shopping fa-xl"
+                  class="fa-solid fa-cart-shopping fa-l"
                   aria-label="Shopping cart icon"
                 ></i>
                 <span class="cart-amount"></span>
