--- a/checkout.html
+++ b/checkout.html
@@ -23,10 +23,22 @@
   </head>
   <body>
     <header>
+      <div class="logo-container">
+        <img
+          class="logo"
+          src="./images/RainyDays_Logo2-white.png"
+          alt="Rainydays logo"
+        />
+        <p class="site-name">RAINYDAYS</p>
+      </div>
+      <input type="checkbox" id="hamburger-menu" />
+      <label for="hamburger-menu" class="menu-icon">
+        <i class="fas fa-bars" aria-label="Icon"></i>
+      </label>
       <nav>
         <ul>
           <li>
-            <a class="active" href="index.html" title="Go to home page">Home</a>
+            <a href="index.html" title="Go to home page">Home</a>
           </li>
           <li>
             <a href="about.html" title="Go to about page">About</a>
@@ -35,10 +47,14 @@
             <a href="contact.html" title="Go to contact page">Contact</a>
           </li>
           <li>
-            <a href="checkout.html" title="Go to checkout page">
+            <a
+              class="active icon-link"
+              href="checkout.html"
+              title="Go to checkout page"
+            >
               <div class="cart-icon">
                 <i
-                  class="fa-solid fa-cart-shopping fa-xl"
+                  class="fa-solid fa-cart-shopping fa-l"
                   aria-label="Shopping cart icon"
                 ></i>
                 <span class="cart-amount"></span>
