Made category filter buttons

--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
       <h1>Our collection</h1>
       <div class="main-container">
         <div class="filter-container">
-          <label for="category">Filter</label>
-          <select name="category" id="category">
-            <option value="">Choose category</option>
-            <option value="female">Women</option>
-            <option value="male">Men</option>
+        <button id="all">All</button>
+        <button id="female">Female</button>
+        <button id="male">Male</button>
           </select>
         </div>
         <div id="display-container"></div>
