--- a/checkout.html
+++ b/checkout.html
@@ -52,13 +52,13 @@
               href="checkout.html"
               title="Go to checkout page"
             >
-              <div class="cart-icon">
+              <div id="cart-icon">
                 <i
                   class="fa-solid fa-cart-shopping fa-l"
                   aria-label="Shopping cart icon"
                 ></i>
-                <span class="cart-amount"></span>
               </div>
+              <span id="cart-amount"></span>
             </a>
           </li>
         </ul>
