--- a/product.html
+++ b/product.html
@@ -44,14 +44,18 @@
             <a href="contact.html" title="Go to contact page">Contact</a>
           </li>
           <li>
-            <a href="checkout.html" title="Go to checkout page">
-              <div class="cart-icon">
+            <a
+              class="icon-link"
+              href="checkout.html"
+              title="Go to checkout page"
+            >
+              <div id="cart-icon">
                 <i
                   class="fa-solid fa-cart-shopping fa-l"
                   aria-label="Shopping cart icon"
                 ></i>
-                <span class="cart-amount"></span>
               </div>
+              <span id="cart-amount"></span>
             </a>
           </li>
         </ul>
