--- a/index.html
+++ b/index.html
@@ -47,14 +47,18 @@
             <a href="contact.html" title="Go to contact page">Contact</a>
           </li>
           <li>
-            <a href="checkout.html" title="Go to checkout page">
-              <div class="cart-icon">
+            <a
+              class="icon-link"
+              href="checkout.html"
+              title="Go to checkout page"
+            >
+              <div id="cart-icon">
                 <i
                   class="fa-solid fa-cart-shopping fa-l"
                   aria-label="Shopping cart icon"
                 ></i>
-                <span class="cart-amount"></span>
               </div>
+              <span id="cart-amount"></span>
             </a>
           </li>
         </ul>
@@ -65,10 +69,9 @@
       <h1>Our collection</h1>
       <div class="main-container">
         <div class="filter-container">
-        <button id="all">All</button>
-        <button id="female">Female</button>
-        <button id="male">Male</button>
-          </select>
+          <button id="all">All</button>
+          <button id="female">Female</button>
+          <button id="male">Male</button>
         </div>
         <div id="display-container"></div>
       </div>
