--- a/purchase-confirmation.html
+++ b/purchase-confirmation.html
@@ -73,6 +73,33 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="socials">
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+      </div>
+      <div class="links">
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./checkout.html">Checkout</a>
+        <a href="./contact.html">Contact us</a>
+        <a href="#">Privacy policy</a>
+        <a href="#">Terms & conditions</a>
+      </div>
+      <div class="copyright-container">
+        <div>
+          <img
+            class="logo-footer"
+            src="./images/RainyDays_Logo2-white.png"
+            alt="Rainydays logo"
+          />
+        </div>
+        <div class="copyright">
+          <i class="fa-regular fa-copyright"></i>
+          <p>2024 rainydays</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
