added html and css to contact page

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,41 @@
         </ul>
       </nav>
     </header>
+    <main class="contact-main">
+      <div class="contact-banner">
+        <div class="contact-img-container">
+          <img src="./images/contact-image.jpg" />
+        </div>
+        <div class="contact-banner-info">
+          <h1>Contact us</h1>
+          <p>
+            Have any questions? Or just want to get in touch? We'd love to hear
+            from you. Here's how you can reach us...
+          </p>
+        </div>
+      </div>
+      <div class="contact-sections">
+        <section class="phone-section">
+          <i class="fa-solid fa-phone"></i>
+          <h2>Call us</h2>
+          <p>
+            Prefer talking to someone over the phone? Call and chat with us now.
+          </p>
+          <p class="phone-number">+4746004600</p>
+        </section>
+        <section class="chat-section">
+          <i class="fa-regular fa-comments chat-icon"></i>
+          <h2>Contact customer support</h2>
+          <p>
+            Get in touch with a member on our customer support team through our
+            online chat.
+          </p>
+          <a href="#" class="chat-container">
+            <i class="fa-regular fa-message chat-box"></i>
+          </a>
+        </section>
+      </div>
+    </main>
     <footer>
       <div class="socials">
         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
