--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,15 @@
       <nav>
         <ul>
           <li>
-            <a class="active" href="index.html" title="Go to home page">Home</a>
+            <a href="index.html" title="Go to home page">Home</a>
           </li>
           <li>
             <a href="about.html" title="Go to about page">About</a>
           </li>
           <li>
-            <a href="contact.html" title="Go to contact page">Contact</a>
+            <a class="active" href="contact.html" title="Go to contact page"
+              >Contact</a
+            >
           </li>
           <li>
             <a
