--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     <main class="contact-main">
       <div class="contact-banner">
         <div class="contact-img-container">
-          <img src="/images/contact-image.jpg" />
+          <img src="./images/contact-image.jpg" />
         </div>
         <div class="contact-banner-info">
           <h1>Contact us</h1>
