--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <div class="logo-container">
         <img
           class="logo"
-          src="/images/RainyDays_Logo2-white.png"
+          src="./images/RainyDays_Logo2-white.png"
           alt="Rainydays logo"
         />
         <p class="site-name">RAINYDAYS</p>
